--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@angular/material": "~21.1.1",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "chart.js": "^4.5.1",
     "firebase": "^12.8.0",
+    "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
